fix position and autoplay on iphone

--- a/src/shared/ui/logo/style.module.css
+++ b/src/shared/ui/logo/style.module.css
@@ -3,7 +3,7 @@
   z-index: 1;
 
   margin-top: auto;
-  padding: 0 30px 120px;
+  padding: 0 30px 10px;
 
   color: #FFF9F9;
   font-family: 'Righteous', sans-serif;
