--- a/src/shared/ui/social-list/style.module.css
+++ b/src/shared/ui/social-list/style.module.css
@@ -4,7 +4,7 @@
 
   position: absolute;
   z-index: 2;
-  bottom: 50px;
+  bottom: 70px;
   left: 50px;
 
   margin: 0;
